[BFN] KRAFUNC-117 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6333 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-permissions-viewrights.html
+++ b/kra-irb-dev/irb-permissions-viewrights.html
@@ -75,7 +75,7 @@ function MM_goToURL() { //v3.0
                     <td class="grid" >Submit a protocol to IRB for review</td>
                   </tr>
                   <tr>
-                    <th class="grid" align="right" >CREATE_AMMENDMENT:</th>
+                    <th class="grid" align="right" >CREATE_AMENDMENT:</th>
                     <td class="grid" >Create a new amendment for a protocol</td>
                   </tr>
                   <tr>
