--- a/kra-irb-dev/irb-permissions.html
+++ b/kra-irb-dev/irb-permissions.html
@@ -116,15 +116,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
               <tr>
                 <th><div align="right">Viewer:</div></th>
-                <td align=left valign=middle >Cybil Cole; Bethany Davis; Eger, Cheryl; Eric Swank</td>
-              </tr>
-              <tr>
-                <th><div align="right">Role 3:</div></th>
-                <td align=left valign=middle >&nbsp;</td>
-              </tr>
-              <tr>
-                <th><div align="right">Role 4:</div></th>
-                <td align=left valign=middle >&nbsp;</td>
+                <td align=left valign=middle >Pham, Anibal A; Smith, Davicia P; Davis, Bethany</td>
               </tr>
             </table>
         </div>
