[BFN] KRAFUNC-117 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6338 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-permissions.html
+++ b/kra-irb-dev/irb-permissions.html
@@ -204,7 +204,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <tr>
                 <th>4</th>
                 <td>iu_bd</td>
-                <td>Bethany Davis</td>
+                <td>Davis, Bethany</td>
                 <td align="right">999027</td>
                 <td>Indiana University</td>
                 <td>Viewer</td>
