[BFN] KRAFUNC-59 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6339 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-personnel.html
+++ b/kra-irb-dev/irb-personnel.html
@@ -181,7 +181,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </tr>
                   <tr>
                     <th align="left" nowrap="nowrap"><div align="right">Training:</div></th>
-                    <td align="left"><input name="checkbox2" type="checkbox" class="nobord" id="checkbox2"></td>
+                    <td align="left">Yes</td>
                   </tr>
                 </tbody>
               </table>
@@ -361,7 +361,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </tr>
                   <tr>
                     <th align="left" nowrap="nowrap"><div align="right">Training:</div></th>
-                    <td align="left"><input name="checkbox2" type="checkbox" class="nobord" id="checkbox2"></td>
+                    <td align="left">No</td>
                   </tr>
                 </tbody>
               </table>
@@ -531,7 +531,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </tr>
                   <tr>
                     <th align="left" nowrap="nowrap"><div align="right">Training:</div></th>
-                    <td align="left"><input name="checkbox2" type="checkbox" class="nobord" id="checkbox2x"></td>
+                    <td align="left">Yes</td>
                   </tr>
                 </tbody>
               </table>
