--- a/kra-irb-dev/irb-personnel.html
+++ b/kra-irb-dev/irb-personnel.html
@@ -180,7 +180,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     </select></td>
                   </tr>
                   <tr>
-                    <th align="left" nowrap="nowrap"><div align="right">Training:</div></th>
+                    <th align="left" nowrap="nowrap"><div align="right">Trained:</div></th>
                     <td align="left">Yes</td>
                   </tr>
                 </tbody>
@@ -360,7 +360,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     </select></td>
                   </tr>
                   <tr>
-                    <th align="left" nowrap="nowrap"><div align="right">Training:</div></th>
+                    <th align="left" nowrap="nowrap"><div align="right">Trained:</div></th>
                     <td align="left">No</td>
                   </tr>
                 </tbody>
@@ -530,7 +530,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     </select></td>
                   </tr>
                   <tr>
-                    <th align="left" nowrap="nowrap"><div align="right">Training:</div></th>
+                    <th align="left" nowrap="nowrap"><div align="right">Trained:</div></th>
                     <td align="left">Yes</td>
                   </tr>
                 </tbody>
