[BFN] KRAFUNC-25 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6346 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -188,7 +188,7 @@ Page
 <a href="#" target="calWindow" title="date selector"><img src="../images/cal.gif" style="cursor:pointer;" alt="date selector" align="top" /></a>
 
 
-<!-- Tinybuttin -->
+<!-- Tinybutton -->
 <input name="x" src="../images/tinybutton-synctotemplate.gif" onclick="javascript: alert('do button action'); return false" class="tinybutton" alt="sync" type="image" />
     
     
