[BFN] KRAFUNC-57 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6348 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -584,17 +584,37 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                         <td align=left valign=middle>
                             <select size=1 name="select3" id="select5" onChange="showDivs(this)">
                                 <option>select</option>
-                                <option selected>Medical Life Science: F03</option>
-                                <option>fellowship</option>
-                                <option>gift</option>
-                                <option>facilities agreement</option>
-                                <option>consortium expenditures</option>
-                                <option>consortium membership</option>
-                                <option>student financial aid</option>
-                                <option>indefinite delivery contract</option>
-                                <option>contract</option>
-                                <option>NIH training grant</option>
-                                <option>other transaction agreement</option>
+                                <option selected>Civil - Engineering: A.04</option>
+                                <option>Social work - Non-Science and Engineering Fields: J.07</option>
+                                <option>Aeronautical and Astronautical - Engineering: A.01</option>
+                                <option>Bioengineering/Biomedical -Engineering: A.02</option>
+                                <option>Chemical - Engineering: A.03</option>
+                                <option>Electrical - Engineering: A.05</option>
+                                <option>Mechanical - Engineering: A.06</option>
+                                <option>Metallurgical and Materials - Engineering: A.07</option>
+                                <option>Other - Engineering: A.99</option>
+                                <option>Astronomy - Physical Sciences: B.01</option>
+                                <option>Chemistry - Physical Sciences: B.02</option>
+                                <option>Physics - Physical Sciences: B.03</option>
+                                <option>Other - Physical Sciences: B99</option>
+                                <option>Atmospheric - Environmental Sciences: C.01</option>
+                                <option>Earth Sciences - Environmental Sciences: C.02</option>
+                                <option>Oceanography - Environmental Sciences: C.03</option>
+                                <option>Other - Environmental Sciences: C.99</option>
+                                <option>Mathematical Science: D.01</option>
+                                <option>Computer Sciences: E.01</option>
+                                <option>Agricultural - Life Sciences: F.01</option>
+                                <option>Biological - Life  Sciences: F.02</option>
+                                <option>Medical - Life Sciences: F.03</option>
+                                <option>Other - Life Sciences: F.99</option>
+                                <option>Psychology: G.01</option>
+                                <option>Economics -Social Sciences: H.01</option>
+                                <option>Political Science - Social Sciences: H.02</option>
+                                <option>Sociology - Social Sciences: H.03</option>
+                                <option>Other - Social Sciences: H.99</option>
+                                <option>Other Sciences, n.e.c.: I.01</option>
+                                <option>Education - Non-Science and Engineering Fields: J.01</option>
+                                <option>Law - Non-Science and Engineering Fields: J.02</option>
                             </select>
                         </td>
                     </tr>
