[BFN] KRAFUNC-105 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6352 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -197,10 +197,10 @@
             <!-- Element Content: Direct/F&A Funds Distribution -->
             	<table align="center" cellpAdding="0" cellspacing="0"  summary=""  >
                     <tr>
-                        <th style="text-align:right;">Award Effective Date:</th>
-                        <td style="text-align:left;">01-Oct-2008</td>
-                        <th style="text-align:right;">Final Expiration Date:</th>
-                        <td style="text-align:left;">31-Dec-2009</td>
+                        <th style="text-align:right;">Project Start Date:</th>
+                        <td style="text-align:left;">01/10/2008</td>
+                        <th style="text-align:right;">Project End Date:</th>
+                        <td style="text-align:left;">31/12/2009</td>
                     </tr>
                     <tr>
                         <th style="text-align:right;">Obligated Total:</th>
@@ -252,11 +252,11 @@
                             <input name="addperiod1" value="1" type="text" style="width:50px;">
                         </td>
                         <td style="text-align:center;">
-                            <input name="addstartdate1" value="01-Oct-2008" type="text" size="10">
+                            <input name="addstartdate1" value="01/10/2008" type="text" size="10">
                             <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                         </td>
                         <td style="text-align:center;">
-                            <input name="addenddate1" value="30-Sep-2009" type="text" size="10">
+                            <input name="addenddate1" value="30/09/2009" type="text" size="10">
                             <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                         </td>
                         <td style="text-align:right;">
@@ -275,11 +275,11 @@
                             <input name="addperiod2" value="2" type="text" style="width:50px;">
                         </td>
                         <td style="text-align:center;">
-                            <input name="addstartdate2" value="01-Oct-2009" type="text" size="10">
+                            <input name="addstartdate2" value="01/10/2009" type="text" size="10">
                             <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                         </td>
                         <td style="text-align:center;">
-                            <input name="addenddate2" value="31-Dec-2009" type="text" size="10">
+                            <input name="addenddate2" value="31/12/2009" type="text" size="10">
                             <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                         </td>
                         <td style="text-align:right;">
