[BFN] KRAFUNC-29 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6353 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-protocol.html
+++ b/kra-irb-dev/irb-protocol.html
@@ -786,13 +786,13 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 <div align="center">
                                 <label>
                                 <select name="select3" id="type">
-                                <option selected>select</option>
-                                <option>sponsor</option>
-                                <option>others</option>
-                                <option>submitted  proposal</option>
-                                <option>development proposal</option>
-                                <option>unit</option>
-                                <option>award</option>
+                                    <option selected>select</option>
+                                    <option>award</option>
+                                    <option>development proposal</option>
+                                    <option>institutional proposal</option>
+                                    <option>others</option>
+                                    <option>sponsor</option>
+                                    <option>unit</option>
                                 </select>
                                 </label>
                                 </div>
