--- a/kra-irb-dev/irb-protocol.html
+++ b/kra-irb-dev/irb-protocol.html
@@ -373,7 +373,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             No greater than minimal risk.
                         </td>
                         <td>
-                        	08-Oct-2008
+                        	08/10/2008
                         </td>
                         <td>&nbsp;
                             
@@ -393,7 +393,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             Moderate Risk
                         </td>
                         <td>
-                        	08-Nov-2008
+                        	08/11/2008
                         </td>
                         <td>&nbsp;
                             
@@ -546,8 +546,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <th rowspan="2">1</th>
                     <td style="text-align:left;">RTOG</td>
                     <td style="text-align:left;">12345</td>
-                    <td style="text-align:left;">01-Dec-2008</td>
-                    <td style="text-align:left;">02-Dec-2008</td>
+                    <td style="text-align:left;">01/12/2008</td>
+                    <td style="text-align:left;">02/12/2008</td>
                     <td rowspan="2" style="text-align:center;">
                         <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" title="delete" width="40" height="15" border="0"></a>
                     </td>
@@ -577,8 +577,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     <th rowspan="2">2</th>
                     <td style="text-align:left;">CALGB</td>
                     <td style="text-align:left;">absdf</td>
-                    <td style="text-align:left;">01-Jan-2008</td>
-                    <td style="text-align:left;">01-Mar-2008</td>
+                    <td style="text-align:left;">01/01/2008</td>
+                    <td style="text-align:left;">01/03/2008</td>
                     <td rowspan="2" style="text-align:center;">
                         <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" title="delete" width="40" height="15" border="0"></a>
                     </td>
