[BFN] KRAFUNC-59 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6367 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-irb-dev/irb-personnel.html
+++ b/kra-irb-dev/irb-personnel.html
@@ -517,7 +517,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                       <!--<a href="#"><img src="../images/tinybutton-updateview.gif" alt="update view" width=71 height=15 hspace=3 border=0 align="absmiddle"></a></td>-->
                   </tr>
                   <tr>
-                    <th align="left" nowrap="nowrap"><div align="right">*Key Person Role:</div></th>
+                    <th align="left" nowrap="nowrap"><div align="right">Role:</div></th>
                     <td width="30%" align="left"><input name="dynaFormInfo[0].addressLine7" maxlength="80" value="" onkeypress="dataChanged();" type="text" id="key person role"/></td>                    
                   </tr>
                   <tr>
