--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -4630,7 +4630,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <table cellpadding="0" cellspacing="0">
                 	 <!-- title line -->
                         <tr>
-                            <th></th>
+                            <th>&nbsp;</th>
                             <th style="text-align:center;">Final Report</th>
                             <th style="text-align:center;">Due Date</th>
                             <th style="text-align:center;">Submission Date</th>
@@ -4668,7 +4668,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                             </td>
                             <td style="text-align:center;">
-                            	<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
+                            	&nbsp;<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
                             </td>
                         </tr>
                     	<tr>
@@ -4677,15 +4677,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             	Technical
                             </td>
                             <td style="text-align:center;">
-                            	<input name="duedate2" type="text" value="09/30/2008" size="10">
-                                <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
+                            	09/30/2008
                             </td>
                             <td style="text-align:center;">
                             	<input name="duedate2" type="text" value="08/17/2008" size="10">
                                 <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                             </td>
                             <td style="text-align:center;">
-                            	<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
+                            	&nbsp;<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
                             </td>
                         </tr>
                     	<tr>
@@ -4694,8 +4693,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             	Patent
                             </td>
                             <td style="text-align:center;">
-                            	<input name="duedate4" type="text" value="12/31/2008" size="10">
-                                <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
+                            	12/31/2008
                             </td>
                             </td>
                             <td style="text-align:center;">
@@ -4703,7 +4701,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                 <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                             </td>
                             <td style="text-align:center;">
-                            	<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
+                            	&nbsp;<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
                             </td>
                         </tr>
                     	<tr>
@@ -4712,15 +4710,14 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                             	Property
                             </td>
                             <td style="text-align:center;">
-                            	<input name="duedate4" type="text" value="12/31/2008" size="10">
-                                <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
+                            	12/31/2008
                             </td>
                             <td style="text-align:center;">
                             	<input name="duedate4" type="text" value="01/15/2009" size="10">
                                 <a href="#"><img src="../images/cal.gif" alt="select date" width="16" height="16" align="top" /></a>
                             </td>
                             <td style="text-align:center;">
-                            	<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
+                            	&nbsp;<!--<a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width="40" height="15" border="0"></a>-->
                             </td>
                         </tr>
                     	<tr>
